--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>ON PAPER</h2>
-							<p>We build you client's Trust<br />
+							<p>Where Android + IOS meet BlockChain<br />
 							<br /></p>
 							<ul class="actions">
 								<!--<li><a href="#" class="button special">Activate</a></li>-->
@@ -42,10 +42,10 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>BUILDING STRONG NETWORKS<br />
+								<h2>BUILDING Global Computer NETWORKS<br />
 								</h2>
-								<p>Add some more text here Victor<br />
-								Ah, and also here!</p>
+								<p>BlockApps, Hyperledger, Ethereum <br />
+								Contact Base at Will</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
