--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<h2>BUILDING Global Computer NETWORKS<br />
 								</h2>
 								<p>BlockApps, Hyperledger, Ethereum <br />
-								Contact Base at Will</p>
+								Contract Base at Will</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
