Update the details

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>ON PAPER</h2>
-							<p>Where Android + IOS meet BlockChain<br />
+							<p>Where Tensorflow meet BlockChain<br />
 							<br /></p>
 							<ul class="actions">
 								<!--<li><a href="#" class="button special">Activate</a></li>-->
@@ -42,9 +42,9 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>BUILDING Global Computer NETWORKS<br />
+								<h2>BUILDING A BETTER NETWORKS<br />
 								</h2>
-								<p>BlockApps, Hyperledger, Ethereum <br />
+								<p>R3 Corda,BlockApps <br />
 								Contract Base at Will</p>
 							</header>
 							<ul class="icons major">
@@ -71,7 +71,7 @@
 							<li>&copy; Untitled</li><li>Design: <a href="lucabertini.com">liuk</a></li>
 						</ul>-->
 					
-						<h2>CONTACT US<br />
+						<h2>victor.tong@getonpaper.tech<br />
 						</h6>
 						<p>email • phone • etc<br />
 						</p>
